[package]
name = "minimal_frost"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
odbc = "0.17"
odbc-sys = "0.25"
anyhow = "1.0"
unicode-segmentation = "1"
arboard = "3.3"
tokio = { version = "1", features = ["full"] }
directories = "5"
tempfile = "3"
lru = "0.12"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
byteorder = "1.5"
regex = "1"
ropey = "1.6"
unicode-width = "0.1"
chrono = "0.4"
serde_json = "1.0"
rust_xlsxwriter = "0.79"
rayon = "1.7"
num_cpus = "1.8"

[target.'cfg(unix)'.dependencies]
fs2 = "0.4"
libc = "0.2"

[profile.dev.package."*"]
opt-level = 3